# larastvel

./: .gitignore  CHANGELOG.md  Cargo.toml  PARITY.md  README.md  config.toml  lefthook.yml
.github/workflows/: ci.yml  deploy-docs.yml
config/: app.toml  broadcasting.toml  cache.toml  database.toml  logging.toml  password_reset.toml  view.toml
crates/larastvel-cli/: Cargo.toml
crates/larastvel-cli/src/: cli.rs  main.rs
crates/larastvel-cli/src/commands/: config.rs  down.rs  env.rs  make.rs  migrate.rs  mod.rs  new.rs  notifications.rs  queue.rs  route.rs  schedule.rs  seed.rs  serve.rs  storage.rs
crates/larastvel-core/: Cargo.toml
crates/larastvel-core/benches/: support.rs
crates/larastvel-core/src/: bootstrap.rs  lib.rs
crates/larastvel-core/src/auth/: email_verification.rs  gates.rs  jwt.rs  middleware.rs  mod.rs  password_reset.rs
crates/larastvel-core/src/broadcasting/: ably.rs  log.rs  mod.rs  native.rs  pusher.rs
crates/larastvel-core/src/cache/: array.rs  database.rs  file.rs  mod.rs
crates/larastvel-core/src/config/: mod.rs
crates/larastvel-core/src/console/: mod.rs
crates/larastvel-core/src/database/: mod.rs
crates/larastvel-core/src/encryption/: mod.rs
crates/larastvel-core/src/events/: mod.rs
crates/larastvel-core/src/foundation/: event_service_provider.rs  mod.rs  route_service_provider.rs
crates/larastvel-core/src/hash/: mod.rs
crates/larastvel-core/src/http/: mod.rs
crates/larastvel-core/src/logging/: mod.rs
crates/larastvel-core/src/mail/: mod.rs
crates/larastvel-core/src/middleware/: mod.rs  presets.rs
crates/larastvel-core/src/models/: factory.rs  mod.rs  serialization.rs
crates/larastvel-core/src/notifications/: error.rs  mod.rs  sender.rs  types.rs
crates/larastvel-core/src/pagination/: mod.rs
crates/larastvel-core/src/pipeline/: mod.rs
crates/larastvel-core/src/queue/: database.rs  manager.rs  memory.rs  mod.rs  sync.rs  worker.rs
crates/larastvel-core/src/rate_limiter/: mod.rs
crates/larastvel-core/src/routing/: mod.rs
crates/larastvel-core/src/scheduling/: cron.rs  error.rs  event.rs  mod.rs  schedule.rs
crates/larastvel-core/src/session/: csrf.rs  middleware.rs  mod.rs
crates/larastvel-core/src/sms/: mod.rs
crates/larastvel-core/src/storage/: mod.rs
crates/larastvel-core/src/support/: arr.rs  collection.rs  datetime.rs  helpers.rs  http_client.rs  mod.rs  number.rs  prompt.rs  str.rs  stringable.rs  vite.rs
crates/larastvel-core/src/translation/: mod.rs
crates/larastvel-core/src/validation/: mod.rs  rules.rs
crates/larastvel-core/src/view/: blade.rs  mod.rs
crates/larastvel-macros/: Cargo.toml
crates/larastvel-macros/src/: lib.rs
crates/larastvel-new/: Cargo.toml
crates/larastvel-new/src/: main.rs
crates/larastvel-testing/: Cargo.toml
crates/larastvel-testing/src/: lib.rs  refresh_database.rs  test_client.rs  test_response.rs
crates/larastvel-testing/tests/: integration_test.rs  soft_deletes_test.rs
crates/larastvel-tinker/: Cargo.toml
crates/larastvel-tinker/src/: main.rs
examples/: auth_service_provider.rs  mail_controller.rs  multi_channel_notification.rs  notification_controller.rs  password_reset_controller.rs  sms_controller.rs  unified_dashboard.rs  websocket_broadcast.rs
src/: lib.rs  main.rs
src/database/: migrator.rs  mod.rs
src/database/migrations/: m20220101_000001_create_users_table.rs  mod.rs
src/models/: user.rs
src/routes/: api.rs  web.rs
website/: index.md  package-lock.json  package.json
website/.vitepress/: config.mts
website/guide/: architecture.md  arr.md  auth.md  authorization.md  broadcasting.md  caching.md  collections.md  configuration.md  controllers.md  database.md  datetime.md  deployment.md  encryption.md  errors.md  events.md  filesystem.md  getting-started.md  http-client.md  localization.md  logging.md  mail.md  middleware.md  migrations.md  notifications.md  number.md  pagination.md  passwords.md  pipeline.md  prompt.md  queues.md  rate-limiting.md  routing.md  scheduling.md  session.md  sms.md  str.md  stringable.md  structure.md  testing.md  validation.md  (+1 more)
website/public/: llms.txt
website/reference/: api-resources.md  broadcast-events.md  cli.md  commands.md  factories.md  mail.md  parity.md  policies.md  providers.md  seeders.md
