[workspace]
members = [
    "crates/larastvel-core",
    "crates/larastvel-cli",
    "crates/larastvel-macros",
    "crates/larastvel-tinker",
    "crates/larastvel-new",
]
resolver = "2"

[package]
name = "larastvel-app"
version = "0.1.0"
edition = "2021"
description = "Larastvel - The Rust framework inspired by Laravel"

[dependencies]
larastvel-core = { path = "crates/larastvel-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
sea-orm-migration.workspace = true

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
toml = "1.1"
tera = "1"
hyper = "1"
colored = "3"
glob = "0.3"
rust-embed = "8"
mime_guess = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
bcrypt = "0.16"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
jsonwebtoken = "9"
regex = "1"
