[workspace]
members = [
    "crates/larastvel-core",
    "crates/larastvel-cli",
    "crates/larastvel-macros",
    "crates/larastvel-tinker",
    "crates/larastvel-new",
    "crates/larastvel-testing",
]
resolver = "2"

[package]
name = "larastvel-app"
version = "0.2.0"
edition = "2021"
description = "Larastvel - The Rust framework inspired by Laravel"
license = "MIT"
repository = "https://github.com/sonyarianto/larastvel"
homepage = "https://larastvel.vercel.app"
authors = ["Sony AK <sony@sony-ak.com>"]

[dependencies]
larastvel-core = { path = "crates/larastvel-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
sea-orm-migration.workspace = true

[dev-dependencies]
axum.workspace = true
tower.workspace = true
dotenvy.workspace = true

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1", features = ["sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
toml = "1.1"
tera = "1"
hyper = "1"
colored = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "query", "rustls"] }
bcrypt = "0.16"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
jsonwebtoken = "9"
regex = "1"
serde_urlencoded = "0.7"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
md-5 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
criterion = { version = "0.6", features = ["html_reports"] }
