[package]
name = "larastvel-cli"
version = "0.2.0"
edition = "2021"
description = "Larastvel CLI - artisan equivalent"
license = "MIT"
repository = "https://github.com/sonyarianto/larastvel"
homepage = "https://larastvel.vercel.app"
authors = ["Sony AK <sony@sony-ak.com>"]

[[bin]]
name = "larastvel"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
colored.workspace = true
uuid.workspace = true
larastvel-core = "0.2"
