[package]
name = "larastvel-core"
version = "0.2.0"
edition = "2021"
description = "Larastvel framework core - inspired by Laravel"
license = "MIT"
repository = "https://github.com/sonyarianto/larastvel"
homepage = "https://larastvel.vercel.app"
authors = ["Sony AK <sony@sony-ak.com>"]

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
sqlx.workspace = true
clap.workspace = true
thiserror.workspace = true

chrono.workspace = true
uuid.workspace = true
once_cell.workspace = true
toml.workspace = true
tera.workspace = true

reqwest.workspace = true
larastvel-macros = "0.2"
async-trait = "0.1"

bcrypt.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
regex.workspace = true
serde_urlencoded.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
md-5.workspace = true
lettre.workspace = true
futures-util = "0.3"

[dev-dependencies]
tower.workspace = true
serial_test = "3"
