[package]
name = "larastvel-new"
version = "0.1.0"
edition = "2021"
description = "Larastvel project scaffolding tool"
license = "MIT"
repository = "https://github.com/sonyarianto/larastvel"
homepage = "https://larastvel.vercel.app"
authors = ["Sony AK <sony@sony-ak.com>"]

[[bin]]
name = "larastvel-new"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
serde.workspace = true
colored.workspace = true
reqwest.workspace = true
