[package]
name = "larastvel-testing"
version = "0.1.0"
edition = "2021"
description = "Larastvel testing utilities - PHPUnit-like assertions for Rust"

[dependencies]
larastvel-core = { path = "../larastvel-core" }
axum.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
regex.workspace = true
bytes = "1"
base64.workspace = true
serde_urlencoded.workspace = true

[dev-dependencies]
tokio.workspace = true
chrono.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
