[package]
name = "larastvel-testing"
version = "0.2.0"
edition = "2021"
description = "Larastvel testing utilities - PHPUnit-like assertions for Rust"
license = "MIT"
repository = "https://github.com/sonyarianto/larastvel"
homepage = "https://larastvel.vercel.app"
authors = ["Sony AK <sony@sony-ak.com>"]

[dependencies]
larastvel-core = "0.2"
axum.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
regex.workspace = true
bytes = "1"
base64.workspace = true
serde_urlencoded.workspace = true

[dev-dependencies]
tokio.workspace = true
chrono.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
