[package]
name = "larastvel-tinker"
version = "0.2.0"
edition = "2021"
description = "Larastvel Tinker - interactive REPL"
license = "MIT"
repository = "https://github.com/sonyarianto/larastvel"
homepage = "https://larastvel.vercel.app"
authors = ["Sony AK <sony@sony-ak.com>"]

[[bin]]
name = "tinker"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
rustyline = "18"
larastvel-core = "0.2"
